--- a/src/TesEdit/TesEdit.csproj
+++ b/src/TesEdit/TesEdit.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{57BF44F0-246C-447E-926B-D64D4C399571}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CTesXEdit</RootNamespace>
-    <AssemblyName>CTesXEdit</AssemblyName>
+    <RootNamespace>TesEdit</RootNamespace>
+    <AssemblyName>TesEdit</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
