Started on record interfaces.

--- a/src/TesEdit/TesEdit.csproj
+++ b/src/TesEdit/TesEdit.csproj
@@ -40,7 +40,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Data\IMod.cs" />
+    <Compile Include="Data\IRecord.cs" />
+    <Compile Include="Data\Record\IActiRecord.cs" />
+    <Compile Include="Data\Record\IAchrRecord.cs" />
+    <Compile Include="Data\Record\IAactRecord.cs" />
+    <Compile Include="Data\Record\ITes4Record.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\SubRecord\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
