Renamed project, changed project structure.

--- a/src/TesProc/TesProc.csproj
+++ b/src/TesProc/TesProc.csproj
@@ -39,17 +39,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Data\GrupEnum.cs" />
     <Compile Include="Data\IMod.cs" />
-    <Compile Include="Data\IRecord.cs" />
+    <Compile Include="Data\Mod.cs" />
+    <Compile Include="Data\Record\IRecord.cs" />
     <Compile Include="Data\Record\IActiRecord.cs" />
     <Compile Include="Data\Record\IAchrRecord.cs" />
     <Compile Include="Data\Record\IAactRecord.cs" />
+    <Compile Include="Data\Record\IMajorRecord.cs" />
     <Compile Include="Data\Record\ITes4Record.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\ModFileStream.cs" />
+    <Compile Include="Serialization\ModSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Data\SubRecord\" />
+    <Folder Include="Data\Record\SubRecord\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
