--- a/src/TesProc/TesProc.csproj
+++ b/src/TesProc/TesProc.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Data\Record\IMajorRecord.cs" />
     <Compile Include="Data\Record\ITes4Record.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\ModFileStream.cs" />
+    <Compile Include="Serialization\ModReader.cs" />
     <Compile Include="Serialization\ModSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
